fixed alignment on homepage

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,7 +25,7 @@ h6{
 }
 ul {
   list-style-type: square;
-  padding-left: 45em;
+  padding-left: 40em;
 }
 
 li {
